Bug 152058 - THEMES: Not possible to change back to default look (without themes)
Summary: THEMES: Not possible to change back to default look (without themes)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.2.3 release
Hardware: All All
: medium trivial
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: LibreOffice-Themes
  Show dependency treegraph
 
Reported: 2022-11-15 19:40 UTC by Dieter
Modified: 2022-12-07 10:36 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dieter 2022-11-15 19:40:29 UTC
Steps to reprocuce

1. Tools -> Options -> LibreOffice -> Personalization
2. Select a theme -> O. K. (Theme is applied)
3. Tools -> Options -> LibreOffice -> Personalization
4. Select a theme -> O. K.

Actual result
No change (Theme is still applied)
(Same in SafeMode)

Expected result
Default look (without theme)

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 55cd20e6228a06836285c14ca6726adb1bb4ffcb
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (de_DE); UI: en-GB
Calc: CL threaded

and in
Version: 7.4.3.1 (x64) / LibreOffice Community
Build ID: 3793858a34d8fef5b92f8fee233f97766f05e281
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL

But not in
Version: 7.2.7.2 (x64) / LibreOffice Community
Build ID: 8d71d29d553c0f7dcbfa38fbfda25ee34cce99a2
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL
Comment 1 V Stuart Foote 2022-11-15 19:48:10 UTC
Confirmed.

Removing an applied area fill theme (ex-Mozilla style theme) by selecting the 'Default look, do not use Themes' on the Tools -> Options -> Personalization panel does not reset. And LibreOffice must be restarted for any leftover area fill from an applied theme to be cleared.
Comment 2 Stéphane Guillou (stragu) 2022-11-16 21:12:06 UTC
bisected to:
 9ce7ea99c9971aa6a86cddea3216fe86063a335b is the first bad commit
commit 9ce7ea99c9971aa6a86cddea3216fe86063a335b
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Tue Apr 19 14:13:07 2022 +0200

    source e0c424ba729e4659ce1007254adbbceafbeaef5b
    
    source e0c424ba729e4659ce1007254adbbceafbeaef5b

 instdir/program/libvcllo.so | Bin 18127224 -> 18127224 bytes
 instdir/program/setuprc     |   2 +-
 instdir/program/versionrc   |   2 +-
 3 files changed, 2 insertions(+), 2 deletions(-)

Which point to this commit:

https://git.libreoffice.org/core/+/e0c424ba729e4659ce1007254adbbceafbeaef5b

Noel, can you please have a look?
Comment 3 Noel Grandin 2022-12-06 11:49:20 UTC
Fixed with https://gerrit.libreoffice.org/c/core/+/143694
Comment 4 Stéphane Guillou (stragu) 2022-12-07 10:36:50 UTC
Thanks Noel! Fix verified in:

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: da3dd48eaf9086f8ab28d6a6655f9a638e51433a
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Any cherrypick to 7.4 planned?