tdf#152058 THEMES: Not possible to change back to default look

Revert "dont keep writing to config when persona is set to 'no'"
This reverts commit e0c424ba729e4659ce1007254adbbceafbeaef5b.

Change-Id: Ia2724c075c7a5fc8deaaedc5cd4356f93b9a6f7f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143694
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>